--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "^17.2.0",
+    "@angular/cdk": "^17.2.1",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
+    "@angular/material": "^17.2.1",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@katoid/angular-grid-layout": "^2.2.0",
+    "@ngneat/until-destroy": "^10.0.0",
+    "angular-gridster2": "^17.0.0",
+    "D": "^1.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
